# Area_scan

./: README.md
Hikvision/: README.md
Hikvision/Capture/: GrabImage_imshow.py  shared_memory_capture.py
Hikvision/Gui/: area_Scan_gui.py
Hikvision/MVS/Samples/64/Python/GrabImage/: GrabImage.py  area_Scan_gui.py  grapimage_imshow.py  gui_capture.py  junk_sh_mry.py  shared_memory_capture.py
Hikvision/MVS/Samples/64/Python/MvImport/: MvCameraControl_class.py
Hikvision/MVS/Samples/64/Python/ParametrizeCamera_LoadAndSave/: FeatureFile.ini
Hikvision/MVS/Samples/64/Trigger_Image/: Trigger_Image
Hikvision/Trigger_board/arduino_examples/enc_tigger_gen/: .en_trg_gen.c.bak.swo  .en_trg_gen.c.swo  uart_1.c
Hikvision/Trigger_board/arduino_examples/pulse_gen/: main.c
Pico/arduino_examples/enc_tigger_gen/: clean.sh  compile.sh  en_trg_gen.c
Pico_example/arduino_examples/enc_tigger_gen/: .en_trg_gen.c.swp
Pico_example/arduino_examples/led_blink/: complie.sh
Pico_examples/: README.md  blink.c  hello_usb.c
Pico_examples/ENCODER_Testing/: CMakeLists.txt  README.md  arduino_read.c  timeCheck.c
Pico_examples/PICO_SampleCodes/: README.md  hello_usb.c
Pico_examples/Signal_read_FIFO/: BitwiseCondition.c  CMakeLists.txt  arduino_read.c  code_review.c  timeCheck.c
Pico_examples/custom_project/: .CMakeLists.txt.swp  .CMakeLists.txtke.swp  .gitignore  .multicore.c.swp  CMakeLists.txt  README.md  multicore.c
Pico_examples/gpio_pin_checks/: .gitignore  CMakeLists.txt  README.md  arduino_read.c
Pico_examples/multicore_FIFO_blocking_Examples/: .README.md.swp  Custom_project_creation.txt  README.md
Pico_examples/multicore_FIFO_blocking_Examples/FIFO_interrupts/: CMakeLists.txt  multicore_fifo_irqs.c
Pico_examples/multicore_FIFO_blocking_Examples/non-blocking_FIFO_example/: .CMakeLists.txt.swp  .non_block.c.swp  CMakeLists.txt  non_block.c
Pico_examples/multicore_FIFO_blocking_Examples/passing_functionPointer/: CMakeLists.txt  multicore_runner.c
Pico_examples/multicore_FIFO_blocking_Examples/queue_handle/: CMakeLists.txt  multicore_runner_queue.c
Pico_examples/multicore_FIFO_blocking_Examples/simple_testcase/: .multicore.c.swp  CMakeLists.txt  multicore.c
WebApplication_Development/Basler_examples/: '  .data_read.py.swp  .gitignore  .grabImage.py.swp  Makefile  README.md  baslerTest.cpp  data_read.py  data_write.py  grabImage  grabImage.cpp  grabImage.py
WebApplication_Development/Basler_examples/templates/: image_render.html
WebApplication_Development/SharedMemory_example/: README.md  data_read.py  data_write.py  grabImage.py  grabImage.py~
WebApplication_Development/SharedMemory_example/templates/: image_render.html  index.html
